load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/build-system/integration-test:integration-test.bzl", "single_gradle_integration_test")

#keep sorted
DATA = [
    "//prebuilts/studio/sdk:add-ons/addon-google_apis-google-latest",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//prebuilts/studio/sdk:platforms/android-19_build_only",
    "//prebuilts/studio/sdk:platforms/android-24_build_only",
    "//prebuilts/studio/sdk:platforms/latest",
    "//prebuilts/studio/sdk:platforms/latest-preview",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
]

#keep sorted
CMAKE = [
    "//prebuilts/studio/sdk:cmake",
]

NDK_LEGACY = [
    "//prebuilts/studio/sdk:ndk-bundle",
]

NDK = [
    "//prebuilts/studio/sdk:ndk",
]

ANDROID_23 = ["//prebuilts/studio/sdk:platforms/android-23_build_only"]

#keep sorted
DEPS = [
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.repository",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/third_party:com.google.guava_guava",
    "//tools/base/third_party:com.google.protobuf_protobuf-java",
    "//tools/base/third_party:com.google.protobuf_protobuf-java-util",
    "//tools/base/third_party:com.google.truth_truth",
    "//tools/base/third_party:org.apache.commons_commons-compress",
    "//tools/base/third_party:org.codehaus.groovy_groovy-all",  # required by //tools/base/build-system:gradle-api
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
    "//tools/base/third_party:org.mockito_mockito-core",
    "//tools/base/third_party:org.ow2.asm_asm",
    "//tools/base/third_party:org.ow2.asm_asm-tree",
    "//tools/base/third_party:org.smali_dexlib2",
]

#keep sorted
MAVEN_REPOS = []

MAVEN_REPO_MANIFESTS = [
    "//tools/base/build-system:gradle_plugin_no_databinding_repo",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:prefab_repo",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test/native:prebuilts",
]

WINDOWS_DISABLED_TAG = [
    "no_test_windows",  # b/73306170
]

single_gradle_integration_test(
    name = "CmakeBasicProjectTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    shard_count = 2,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CMakeBuildSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeGradleTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "InjectedAbiSplitTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeMultiModuleTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeStlMatrixTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeVariantApiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CombinedAbiDensitySplits",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/combinedAbiDensitySplits"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "HeaderInCmakeListsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "InjectedAbiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "KeepDebugSymbolsTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "MergeNativeDebugMetadataTaskTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/dynamicApp"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "MergeNativeLibsTaskTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NativeBuildOutputTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "V2NativeModelTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildAndroidMkLibraryTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildBuildSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildVariantApiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "Pre21SplitTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "PrefabTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + [
        "//tools/base/build-system/integration-test:test-projects/prefabApp",
        "//tools/base/build-system/integration-test:test-projects/prefabNoDeps",
    ],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "PrefabPublishingTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/prefabPublishing"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    shard_count = 2,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RenderscriptNdkTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/renderscriptNdk"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RsEnabledAnnotationTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/extractRsEnabledAnnotations"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RsSupportModeTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/rsSupportMode"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "VulkanTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/vulkan"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    tags = [
        "no_test_mac",  # b/110846203
    ],
    deps = DEPS,
)

single_gradle_integration_test(
    name = "ExtractNativeDebugMetadataTaskTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/dynamicApp"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkLibPrebuiltsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkPrebuiltsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkPrebuilts"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkSanAngelesTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkSanAngeles"],
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NoSplitNdkVariantsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeSysrootTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_manifests = MAVEN_REPO_MANIFESTS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/livedata/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.0.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex-instrumentation/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/19.0:jar",
        "//tools/base/testing-infrastructure/device-pool/device-provider",  # TODO: remove
    ],
    use_zip = False,
)
