load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/build-system/integration-test:integration-test.bzl", "single_gradle_integration_test")

#keep sorted
DATA = [
    "//prebuilts/studio/sdk:add-ons/addon-google_apis-google-latest",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//prebuilts/studio/sdk:platforms/android-19_build_only",
    "//prebuilts/studio/sdk:platforms/android-24_build_only",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
    "//tools/base/build-system/integration-test:android_platform_for_tests",
]

#keep sorted
CMAKE = [
    "//prebuilts/studio/sdk:cmake",
]

NDK_LEGACY = [
    "//prebuilts/studio/sdk:ndk-bundle",
]

NDK = [
    "//prebuilts/studio/sdk:ndk",
]

DOLPHIN = [
    "//prebuilts/studio/buildbenchmarks/dolphin.3627ef8a:dolphin.3627ef8a",
]

ABSEIL = [
    "//prebuilts/studio/buildbenchmarks/abseil-cpp.731689ff:abseil-cpp.731689ff",
]

ANDROID_23 = ["//prebuilts/studio/sdk:platforms/android-23_build_only"]

#keep sorted
DEPS = [
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.repository",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.protobuf.protobuf-java",
    "@maven//:com.google.protobuf.protobuf-java-util",
    "@maven//:com.google.truth.truth",
    "@maven//:org.apache.commons.commons-compress",
    "@maven//:org.codehaus.groovy.groovy-all",  # required by //tools/base/build-system:gradle-api
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
    "@maven//:org.mockito.mockito-core",
    "@maven//:org.ow2.asm.asm",
    "@maven//:org.ow2.asm.asm-tree",
    "@maven//:org.smali.dexlib2",
]

#keep sorted
MAVEN_REPO_ZIPS = [
    "//tools/base/build-system:android_gradle_plugin",
]

#keep sorted
MAVEN_REPOS = [
    "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:prefab_repo",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test/native:prebuilts",
]

WINDOWS_DISABLED_TAG = [
    "no_test_windows",  # b/73306170
]

single_gradle_integration_test(
    name = "CmakeBasicProjectTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    shard_count = 5,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CMakeBuildSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeGradleTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "InjectedAbiSplitTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeMultiModuleTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeStlMatrixTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeVariantApiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CombinedAbiDensitySplits",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/combinedAbiDensitySplits"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "HeaderInCmakeListsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "InjectedAbiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "KeepDebugSymbolsTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "MergeNativeDebugMetadataTaskTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/dynamicApp"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "MergeNativeLibsTaskTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NativeBuildOutputTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "V2NativeModelTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildAndroidMkLibraryTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildBuildSettingsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildTargetsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkBuildVariantApiTest",
    timeout = "long",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "Pre21SplitTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "PrefabTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + [
        "//tools/base/build-system/integration-test:test-projects/prefabApp",
        "//tools/base/build-system/integration-test:test-projects/prefabNoDeps",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "ModuleToModuleDepsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + [
        "//tools/base/build-system/integration-test:test-projects/prefabApp",
        "//tools/base/build-system/integration-test:test-projects/prefabNoDeps",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    shard_count = 3,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "PrefabErrorReportingTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "PrefabPublishingTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/prefabPublishing"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    shard_count = 2,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RenderscriptNdkTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + NDK + ["//tools/base/build-system/integration-test:test-projects/renderscriptNdk"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RsEnabledAnnotationTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/extractRsEnabledAnnotations"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "RsSupportModeTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/rsSupportMode"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "VulkanTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/vulkan"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    tags = [
        "no_test_mac",  # b/110846203
    ],
    deps = DEPS,
)

single_gradle_integration_test(
    name = "ExtractNativeDebugMetadataTaskTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/dynamicApp"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkJniLibTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkJniLib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkLibPrebuiltsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkPrebuiltsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkPrebuilts"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NdkSanAngelesTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK + ["//tools/base/build-system/integration-test:test-projects/ndkSanAngeles"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "NoSplitNdkVariantsTest",
    srcs = "src/test/java/com/android/build/gradle/integration/ndk/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "CmakeSysrootTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

single_gradle_integration_test(
    name = "DolphinProbe",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + DOLPHIN + ["//tools/buildSrc/base:version.properties"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    shard_count = 2,
    tags = ["no_test_windows"],
    deps = DEPS,
)

single_gradle_integration_test(
    name = "AbseilTest",
    srcs = "src/test/java/com/android/build/gradle/integration/nativebuild/",
    data = DATA + CMAKE + NDK + ABSEIL + ["//tools/buildSrc/base:version.properties"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = MAVEN_REPOS,
    shard_count = 1,
    tags = [],
    deps = DEPS,
)

maven_repository(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:com.android.support.constraint.constraint-layout_1.0.2",
        "@maven//:com.android.support.multidex_1.0.2",
        "@maven//:com.google.guava.guava_19.0",
    ],
)
